Signed-off-by: bingyuea <2310179201@qq.com>[modify]

--- a/tinyHeart.html
+++ b/tinyHeart.html
@@ -21,6 +21,10 @@
 	<script type = "text/javaScript" src = "js/mom.js"></script>
 	<script type = "text/javaScript" src = "js/collision.js"></script>
 	<script type = "text/javaScript" src = "js/baby.js"></script>
+	<script type = "text/javaScript" src = "js/data.js"></script>
+	<script type = "text/javaScript" src = "js/wave.js"></script>
+	<script type = "text/javaScript" src = "js/helo.js"></script>
+	<script type = "text/javaScript" src = "js/dust.js"></script>
 
 </html>
 
